force-app/main/default/objects/Real_Time_Inventory__c/Real_Time_Inventory__c.object-meta.xml
<CustomObject>
    <label>Real Time Inventory</label>
    <nameField>
        <label>Real-time Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Real Time Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>