force-app/main/default/objects/Real_Time_Inventory__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Real Time Inventory</relationshipLabel>
    <relationshipName>Real_Time_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>