force-app/main/default/objects/Real_Time_Inventory__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>日期-客户-产品</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>