force-app/main/default/objects/Real_Time_Inventory__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <formula>TEXT(Customer__r.Sales_Region__c )</formula>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>