force-app/main/default/objects/Real_Time_Inventory__c/fields/Sell_In_Sub_Out__c.field-meta.xml
<CustomField>
    <fullName>Sell_In_Sub_Out__c</fullName>
    <formula>Sell_In_Number__c - Sell_Out_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell In Sub Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>