force-app/main/default/objects/Real_Time_Inventory__c/fields/Sell_Out_Number__c.field-meta.xml
<CustomField>
    <fullName>Sell_Out_Number__c</fullName>
    <label>Sell Out Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>